# goe

./: LICENSE  README.md  Status.md  pyproject.toml
goe/: __main__.py  cli.py  conftest.py  connection.py  json_client.py  test_controller.py  test_json_client.py  test_utils.py
goe/charger/: __init__.py  components.py  enums.py  slices.py  test_charger.py  test_components.py
goe/components/: __init__.py  client.py  common.py  component.py  test_common.py  test_component.py
goe/controller/: __init__.py  components.py  conftest.py  slices.py  test_controller.py
goe/slices/: __init__.py  client.py  common.py  slice.py  test_client.py  test_common.py  test_slice.py
testdata/: charger_status_all.json  controller_status_all.json
