[tool.poetry]
name = "goe"
version = "0.1.0"
description = ""
authors = ["Michael Helmling <michaelhelmling@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
