[tool.poetry]
name = "goe"
version = "0.2.2"
description = "API clients for go-e devices"
authors = ["Michael Helmling <michaelhelmling@posteo.de>"]
license = "MIT"
repository = "https://github.com/supermihi/goe"
readme = "README.md"
packages = [{ include = "goe" }]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = 'goe.cli:run'